# cmake-define-find-package

./: CMakeLists.txt  Copyright.txt  DefineFindPackage2.cmake  README.md
example-project/: CMakeLists.txt
